Fix feature product_page add align and wrap to characteristics

--- a/css/product-page.css
+++ b/css/product-page.css
@@ -131,6 +131,10 @@
 
 .characteritics-container {
   padding: 5px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: center;
+  align-items: center;
 }
 
 .product-characteritics {
@@ -151,7 +155,7 @@
   color: #838383;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 550px) {
   .product-page {
     display: flex;
     flex-wrap: wrap;
